# mono256_sic-core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  db_tmp.sqlite3  docker-compose.prod.yml  docker-compose.yml  manage.py  package-lock.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-render-on-tag.yml  release.yml
apps/accounts/: admin.py  models.py  selectors.py  services.py  visibility.py
apps/accounts/api/: permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_replace_visibility_index.py
apps/closing/: apps.py  exports.py  models.py  selectors.py  services.py  support.py  urls.py
apps/closing/api/: serializers.py  views.py
apps/closing/migrations/: 0001_initial.py
apps/common/: cache.py  models.py  pagination.py  permissions.py  query_params.py  role_resolution.py
apps/companies/: account_resolution.py  admin.py  apps.py  demo_import.py  demo_schema.py  demo_validation.py  models.py  opening.py  selectors.py  services.py
apps/companies/api/: permissions.py  serializers.py  urls.py  views.py
apps/companies/management/commands/: load_chart_of_accounts.py  load_demo_company.py
apps/companies/migrations/: 0001_initial.py  0002_pre_hordak_0055_drop_views.py  0003_post_hordak_0055_recreate_views.py  0004_company_books_closed_until.py  0005_company_demo_and_read_only.py  0006_company_description.py  0007_company_demo_publication_metadata.py
apps/courses/: admin.py  apps.py  models.py  selectors.py  services.py
apps/courses/api/: serializers.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_coursedemocompanyvisibility.py  0003_coursesharedcompanyvisibility.py
apps/example/: admin.py  apps.py  models.py  selectors.py  services.py
apps/example/api/: serializers.py  urls.py  views.py
apps/example/migrations/: 0001_initial.py
apps/journal/: admin.py  apps.py  models.py  selectors.py  services.py
apps/journal/api/: serializers.py  urls.py  views.py
apps/journal/migrations/: 0001_initial.py  0002_journalentry_reversal_of_and_more.py  0003_optimize_reporting_indexes.py  0004_opening_source_type_and_unique_constraint.py  0005_expand_source_type_for_closing_entries.py
apps/reports/: apps.py  cache.py  exercise_context.py  serializers.py  urls.py  views.py
apps/reports/exports/: __init__.py  common.py  journal_book_xlsx.py  ledger_xlsx.py  trial_balance_xlsx.py
apps/reports/services/: journal_book.py  ledger.py  trial_balance.py
apps/users/: admin.py  apps.py  models.py  services.py
apps/users/api/: admin_urls.py  auth_views.py  serializers.py  teacher_urls.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_role.py  0003_backfill_admin_role.py  0004_registrationcodeconfig.py
config/: context.py  exceptions.py  logging.py  otel.py  urls.py
config/middleware/: request_id.py  request_logging.py  tenant.py
config/settings/: base.py  local.py  prod.py  test.py
docs/: accounting-rules.md  architecture.md  backlog.md  development.md  frontend-integration.md  glossary.md  observability.md  operations.md  production-readiness.md  release-process.md  security.md  sic1-compliance.md  testing.md
docs/adr/: 0001-record-architecture-decisions.md  0002-multitenancy-strategy.md  0003-service-layer-pattern.md
docs/openapi/: openapi.yaml
postman/: __PROJECT_SLUG__.postman_collection.json  __PROJECT_SLUG__.postman_environment.json  sic_core.postman_collection.json  sic_core.postman_environment.json
scripts/: bootstrap.sh  db_explain.sh  export_schema.sh  load_profile.sh  readiness_check.sh  run_gunicorn.sh  run_migrations.sh  test_preflight.sh
tests/: conftest.py
tests/accounts/: test_visibility.py
tests/auth/: test_auth_api_contract.py  test_auth_throttling_config.py  test_registration_security.py
tests/closing/: test_simplified_closing.py
tests/companies/: test_api_contract.py  test_course_shared_company.py  test_demo_company.py  test_demo_import.py  test_opening_api.py  test_opening_permissions.py  test_opening_services.py  test_selectors.py
tests/courses/: test_services.py  test_teacher_api.py
tests/example/: test_api.py  test_health.py  test_services.py  test_tenant_middleware.py
tests/journal/: test_closing_rules.py  test_opening_gates.py
tests/reports/: test_exports.py  test_logical_exercise_reporting.py  test_service_aliases.py
tests/roles/: test_user_roles.py
tests/support/: opening.py
